--- a/style.css
+++ b/style.css
@@ -3,3 +3,72 @@
 /* bleu #0065FC */
 /* bleu clair #DEEBFF */
 /* gris #F2F2F2 */
+
+body
+{
+    width: 900px;
+    margin: auto;
+    font-family: 'Raleway', Arial, sans-serif;
+    padding: 2em;
+    letter-spacing: -1px;
+}
+
+ul li
+{
+    list-style-type: none;
+}
+
+a
+{
+    text-decoration: none;
+}
+
+h1, h2, h3
+{
+    font-weight: bold;
+}
+
+#logo_nav
+{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-bottom: 40px;
+}
+
+#logo_nav > img
+{
+    height: 50px;
+    width: auto;
+}
+
+#logo_nav > nav > a
+{
+    margin-left: 50px;
+    font-weight: bold;
+    font-size: 15px;
+    color: #0065FC;
+}
+
+#logo_nav > nav > a:hover
+{
+    text-decoration: overline;
+}
+
+#title
+{
+    margin-bottom: 15px;
+}
+
+#title > h1
+{
+    font-size: 20px;
+    font-weight: 800;
+    margin-bottom: 5px;
+}
+
+#title > p
+{
+    font-size: 15px;
+    font-weight: 500;
+}
