--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body
     margin: auto;
     font-family: 'Raleway', Arial, sans-serif;
     padding: 2em;
-    letter-spacing: -1px;
 }
 
 ul li
@@ -27,6 +26,12 @@ h1, h2, h3
 {
     font-weight: bold;
 }
+
+
+
+
+
+/* --------------------- HEADER ------------------*/
 
 #logo_nav
 {
@@ -52,7 +57,8 @@ h1, h2, h3
 
 #logo_nav > nav > a:hover
 {
-    text-decoration: overline;
+    border-top: 1px solid #0065FC;
+    padding-top: 20px;
 }
 
 #title
@@ -71,4 +77,88 @@ h1, h2, h3
 {
     font-size: 15px;
     font-weight: 500;
+}
+
+#form
+{
+    display: flex;
+    margin: 20px 0;
+}
+
+.bi
+{
+    text-align: center;
+    background-color: #F2F2F2;
+    border: 1px solid #F2F2F2;
+    border-radius: 10px 0 0 10px;
+    padding: 10px;
+}
+
+#form > input
+{
+    width: 220px;
+    border: 1px solid #F2F2F2;
+    border-radius: 0;
+}
+
+.btn-primary
+{
+    border-radius: 0 10px 10px 0;
+}
+
+#filters
+{
+    display: flex;
+    font-weight: bold;
+    margin: 20px 0;
+}
+
+#filters > a
+{
+    border: 3px solid #F2F2F2;
+    border-radius: 20px;
+    padding-right: 10px;
+}
+
+.fa-cat, .fa-money-bill-wave, .fa-child, .fa-heart
+{
+    color: #0065FC;
+    background-color: #DEEBFF;
+    padding: 10px;
+    border-radius: 20px;
+    margin-right: 10px;
+}
+
+#filters > h3, a
+{
+    margin: auto;
+    font-weight: bolder;
+}
+
+
+.fa-info
+{
+    font-size: 10px;
+    color: #0065FC;
+    padding: 5px 8px;
+    border: 2px solid #F2F2F2;
+    border-radius: 50px;
+    margin: 0 10px 20px 0;
+}
+
+
+
+
+
+
+
+/* --------------- Média Queries ----------------*/
+
+/* Sur les écrans, quand la largeur de la fenêtre fait au maximum 1024px */
+@media screen and (max-width: 1024px)
+{
+    body
+    {
+        width: auto;
+    }
 }
