--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body
 {
-    width: 900px;
+    width: 1225px;
     margin: auto;
     font-family: 'Raleway', Arial, sans-serif;
     padding: 2em;
@@ -27,9 +27,15 @@ h1, h2, h3
     font-weight: bold;
 }
 
+.fa-star
+{
+    color: #0065FC;
+}
 
-
-
+.grey
+{
+    color: grey;
+}
 
 /* --------------------- HEADER ------------------*/
 
@@ -57,7 +63,7 @@ h1, h2, h3
 
 #logo_nav > nav > a:hover
 {
-    border-top: 1px solid #0065FC;
+    border-top: 3px solid #0065FC;
     padding-top: 20px;
 }
 
@@ -115,7 +121,8 @@ h1, h2, h3
 
 #filters > a
 {
-    border: 3px solid #F2F2F2;
+    border: 2px solid lightgrey;
+    border-left: 0;
     border-radius: 20px;
     padding-right: 10px;
 }
@@ -129,9 +136,14 @@ h1, h2, h3
     margin-right: 10px;
 }
 
+#filters > h3
+{
+    padding-top: 10px;
+}
+
 #filters > h3, a
 {
-    margin: auto;
+    margin: 10px 20px 10px 0;
     font-weight: bolder;
 }
 
@@ -147,10 +159,93 @@ h1, h2, h3
 }
 
 
+/* --------------- Section ------------------*/
 
+#main
+{
+    display: flex;
+}
 
+.hosting
+{
+    width: 100%;
+    margin-right: 30px;
+    padding: 35px 35px;
+    background-color: #F2F2F2;
+    border-radius: 20px;
+}
 
+.hosting h2
+{
+    font-weight: 900;
+    padding-bottom: 20px;
+}
 
+.hosting > p
+{
+    font-weight: 900;
+    margin-top: 20px;
+}
+
+.hosting-list
+{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.hosting-card
+{
+    width: 240px;
+    padding: 5px 5px 10px 5px;
+    margin-bottom: 20px;
+    background-color: white;
+    border-radius: 20px;
+    box-shadow: 0 0 10px lightgrey;
+}
+
+.hosting-card > h3, p
+{
+    margin: 7px;
+}
+
+.first
+{
+    margin-left: 7px;
+}
+
+.hosting-card img
+{
+    height: 120px;
+}
+
+.cover
+{
+    border-radius: 15px 15px 0 0;
+    margin-bottom: 5px;
+    object-fit: cover;
+    width: 230px;
+    height: 60%;
+}
+
+.popular
+{
+    width: 35%;
+    padding: 20px;
+    background-color: #4b4ba7;
+    border-radius: 20px;
+}
+
+.popular h2
+{
+    font-weight: 900;
+    padding-bottom: 20px;
+}
+
+.popular-list
+{
+    padding: 20px;
+}
 
 /* --------------- Média Queries ----------------*/
 
@@ -159,6 +254,7 @@ h1, h2, h3
 {
     body
     {
-        width: auto;
+       
     }
 }
+
