--- a/style.css
+++ b/style.css
@@ -91,13 +91,18 @@ h1, h2, h3
     margin: 20px 0;
 }
 
-.bi
+.fa-map-marker-alt
 {
     text-align: center;
     background-color: #F2F2F2;
     border: 1px solid #F2F2F2;
     border-radius: 10px 0 0 10px;
-    padding: 10px;
+    padding: 10px 15px;
+}
+
+#form
+{
+    height: 40px;
 }
 
 #form > input
@@ -107,9 +112,13 @@ h1, h2, h3
     border-radius: 0;
 }
 
-.btn-primary
+.btn
 {
     border-radius: 0 10px 10px 0;
+    color: white;
+    background-color: #0065FC;
+    border: none;
+    padding: 10px;
 }
 
 #filters
@@ -196,7 +205,7 @@ h1, h2, h3
 
 .hosting-card
 {
-    width: 220px;
+    width: 230px;
     padding: 5px 5px 10px 5px;
     margin-bottom: 20px;
     background-color: white;
@@ -222,7 +231,7 @@ h1, h2, h3
 .hosting-card img
 {
     height: 100px;
-    width: 210px;
+    width: 230px;
 }
 
 .cover
@@ -256,11 +265,11 @@ h1, h2, h3
 .popular-card
 {
     background-color: white;
-    padding: 5px 20px 5px 5px; 
+    padding: 5px 20px 2px 5px; 
     margin: 25px 0 25px 0;
     border-radius: 20px;
     display: flex;
-    width: 300px;
+    width: 280px;
     box-shadow: 0 0 10px lightgrey;
 }
 
@@ -283,12 +292,17 @@ h1, h2, h3
 
 .popular-text > p
 {
-    margin: 0 0 25px 15px;
+    margin: 0 0 30px 15px;
 }
 
 .first-popular
 {
     margin-left: 15px;
+}
+
+.grid
+{
+    display: grid;
 }
 
 /* --------------- Média Queries ----------------*/
