--- a/style.css
+++ b/style.css
@@ -300,9 +300,77 @@ h1, h2, h3
     margin-left: 15px;
 }
 
+#activities
+{
+    margin-bottom: 50px;
+}
+
+#activities > h2
+{
+    margin: 50px 0 20px 0;
+}
+
 .grid
 {
     display: grid;
+    justify-content: space-between;
+    grid-gap: 25px;
+}
+
+.activity-card
+{
+    width: 280px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px lightgrey;
+}
+
+.activity-card > h3
+{
+    padding: 15px;
+}
+
+.activity-card img
+{
+    object-fit: cover;
+    border-radius: 10px 10px 0 0;
+    height: 100px;
+    width: 280px;
+}
+
+.card1
+{
+    grid-column: 1;
+    grid-row: 1/4;
+}
+
+.card2
+{
+    grid-column: 2;
+    grid-row: 1/3;
+}
+
+.card3
+{
+    grid-column: 2;
+    grid-row: 3/4;
+}
+
+.card4
+{
+    grid-column: 3;
+    grid-row: 1/4;
+}
+
+.card5
+{
+    grid-column: 4;
+    grid-row: 2/4;
+}
+
+.card6
+{
+    grid-column: 4;
+    grid-row: 1/2;
 }
 
 /* --------------- Média Queries ----------------*/
