--- a/style.css
+++ b/style.css
@@ -9,7 +9,12 @@ body
     width: 1225px;
     margin: auto;
     font-family: 'Raleway', Arial, sans-serif;
-    padding: 2em;
+    padding-top: 2em;
+}
+
+.marge
+{
+    margin: 0 20px;
 }
 
 ul li
@@ -128,6 +133,18 @@ h1, h2, h3
     margin: 20px 0;
 }
 
+.fading-1 
+{
+    background: linear-gradient(-45deg, transparent calc(100%/3), rgba(0, 0, 0, 0.5), transparent calc(200%/3)) bottom right/350% 100% no-repeat;
+    transition: 0.5s linear, background-size 0s 0.5s;
+}
+
+.fading-1:hover 
+{
+    background-position: bottom left;
+    background-size: 0 0;
+  }
+
 #filters > a
 {
     border: 2px solid lightgrey;
@@ -175,22 +192,22 @@ h1, h2, h3
     display: flex;
 }
 
-.hosting
+#hosting
 {
     width: 100%;
     margin-right: 30px;
-    padding: 35px 35px;
+    padding: 35px 0 35px 35px;
     background-color: #F2F2F2;
     border-radius: 20px;
 }
 
-.hosting h2
+#hosting h2
 {
     font-weight: 900;
     padding-bottom: 20px;
 }
 
-.hosting > p
+#hosting > p
 {
     font-weight: 900;
     margin-top: 20px;
@@ -201,16 +218,17 @@ h1, h2, h3
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    padding-right: 15px;
 }
 
 .hosting-card
 {
-    width: 230px;
+    width: 210px;
     padding: 5px 5px 10px 5px;
-    margin-bottom: 20px;
     background-color: white;
     border-radius: 20px;
     box-shadow: 0 0 10px lightgrey;
+    color: black;
 }
 
 .hosting-card > h3
@@ -221,6 +239,7 @@ h1, h2, h3
 .hosting-card > p
 {
     margin: 7px;
+    font-weight: 100;
 }
 
 .first
@@ -231,7 +250,7 @@ h1, h2, h3
 .hosting-card img
 {
     height: 100px;
-    width: 230px;
+    width: 210px;
 }
 
 .cover
@@ -271,6 +290,7 @@ h1, h2, h3
     display: flex;
     width: 280px;
     box-shadow: 0 0 10px lightgrey;
+    color: black;
 }
 
 .popular-card img
@@ -293,6 +313,7 @@ h1, h2, h3
 .popular-text > p
 {
     margin: 0 0 30px 15px;
+    font-weight: 100;
 }
 
 .first-popular
@@ -313,8 +334,8 @@ h1, h2, h3
 .grid
 {
     display: grid;
-    justify-content: space-between;
-    grid-gap: 25px;
+    grid-gap: 20px;
+
 }
 
 .activity-card
@@ -343,10 +364,20 @@ h1, h2, h3
     grid-row: 1/4;
 }
 
+.card1 > img
+{
+    height: 440px;
+}
+
 .card2
 {
     grid-column: 2;
     grid-row: 1/3;
+}
+
+.card2 > img
+{
+    height: 270px;
 }
 
 .card3
@@ -361,17 +392,57 @@ h1, h2, h3
     grid-row: 1/4;
 }
 
+.card4 > img
+{
+    height: 440px;
+}
+
 .card5
 {
     grid-column: 4;
-    grid-row: 2/4;
+    grid-row: 1/2;
 }
 
 .card6
 {
     grid-column: 4;
-    grid-row: 1/2;
+    grid-row: 2/4;
 }
+
+.card6 > img
+{
+    height: 270px;
+}
+
+/* --------------- Footer ----------------*/
+
+footer
+{
+    background-color: #F2F2F2;
+    display: flex;
+    padding: 20px;
+    min-height: auto;
+}
+
+footer > div
+{
+    width: auto;
+    margin: 20px 200px 20px 20px;
+}
+
+footer > div > h3
+{
+    margin-bottom: 20px;
+}
+
+footer > div > a
+{
+    font-weight: 200;
+    color: black;
+    margin: 5px 0 10px 0;
+    display: flex;
+}
+
 
 /* --------------- Média Queries ----------------*/
 
