--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,12 @@
 body
 {
     font-family: 'Raleway', Arial, sans-serif;
-    padding-top: 2em;
+    margin-top: 2em;
 }
 
 .marge
 {
-    width: 1225px;
+    width: 62%; /*1225px*/
     margin: auto;
 }
 
@@ -24,6 +24,7 @@ ul li
 a
 {
     text-decoration: none;
+    color: black;
 }
 
 h1, h2, h3
@@ -60,15 +61,20 @@ h1, h2, h3
 #logo_nav > nav > a
 {
     margin-left: 50px;
-    font-weight: bold;
     font-size: 15px;
+}
+
+.sub
+{
     color: #0065FC;
+    font-weight: bold;
 }
 
 #logo_nav > nav > a:hover
 {
     border-top: 3px solid #0065FC;
     padding-top: 20px;
+    color: #0065FC
 }
 
 #title
@@ -123,6 +129,11 @@ h1, h2, h3
     background-color: #0065FC;
     border: none;
     padding: 10px;
+}
+
+.fa-search
+{
+    display: none;
 }
 
 #filters
@@ -222,7 +233,6 @@ h1, h2, h3
 
 .hosting-card
 {
-    width: 210px;
     padding: 5px 5px 10px 5px;
     background-color: white;
     border-radius: 20px;
@@ -239,6 +249,11 @@ h1, h2, h3
 {
     margin: 7px;
     font-weight: 100;
+}
+
+.bold
+{
+    font-weight: bold;
 }
 
 .first
@@ -363,7 +378,6 @@ h1, h2, h3
 {
     object-fit: cover;
     border-radius: 10px 10px 0 0;
-    height: 100px;
     width: 280px;
 }
 
@@ -441,12 +455,7 @@ footer
     display: flex;
     justify-content: center;
     flex-wrap: nowrap;
-    padding: 20px;
-}
-
-footer > div
-{
-    margin: 20px 200px 20px 20px;
+    padding: 1em;
 }
 
 footer > div > h3
@@ -454,23 +463,109 @@ footer > div > h3
     margin-bottom: 20px;
 }
 
-footer > div > a
+.marge-footer
 {
-    font-weight: 200;
-    color: black;
-    margin: 5px 0 10px 0;
+    width: 62%;
     display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
+.marge-footer > div > a
+{
+    display: block;
+    font-weight: lighter;
+}
 
 /* --------------- Média Queries ----------------*/
 
 /* Sur les écrans, quand la largeur de la fenêtre fait au maximum 1024px */
-@media screen and (max-width: 1024px)
+@media all and (max-width: 1024px)
 {
-    body
+    .marge
     {
-       
+        background-color: aqua;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
     }
+
+    header
+    {
+        margin: 1em;
+    }
+
+    .research
+    {
+        display: none;
+    }
+
+    .fa-search
+    {
+        display: contents;
+    }
+
+    .btn
+    {
+        border-radius: 10px;
+    }
+    
+    #filters
+    {
+        flex-wrap: wrap;
+    }
+
+    #main
+    {
+        flex-direction: column-reverse;
+    }
+
+    #hosting
+    {
+        background-color: white;
+    }
+
+    .hosting-card > img
+    {
+        width: 100%;
+    }
+
+    .popular
+    {
+        width: 100%;
+    }
+
+    #activities
+    {
+        padding: 1em;
+    }
+
+    .activity-card
+    {
+        width: 100%;
+    }
+
+    .activity-card img
+    {
+        max-height: 7em;
+        width: 100%;
+    }
+
+    .grid
+    {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .marge-footer
+    {
+        display: flex;
+    }
+
+    .marge-footer > div
+    {
+        margin: 1em;
+    }
+
 }
 
