--- a/css/style.css
+++ b/css/style.css
@@ -116,9 +116,7 @@ h1, h2, h3
 
 #form > input
 {
-    width: 220px;
     border: 1px solid #F2F2F2;
-    border-radius: 0;
 }
 
 .btn
@@ -127,7 +125,7 @@ h1, h2, h3
     color: white;
     background-color: #0065FC;
     border: none;
-    padding: 10px;
+    padding: 1em;
 }
 
 .fa-search
@@ -137,9 +135,13 @@ h1, h2, h3
 
 #filters
 {
+    align-items: baseline;
+}
+
+#filters, .filter-list
+{
     display: flex;
     font-weight: bold;
-    margin: 20px 0;
 }
 
 .fading-1 
@@ -152,16 +154,21 @@ h1, h2, h3
 {
     background-position: bottom left;
     background-size: 0 0;
-  }
+}
 
-#filters > a
+.filter-list
+{
+    flex-wrap: wrap;
+    margin: 0.5em 0;
+}
+
+.filter-list > a /* #filters */
 {
     border: 2px solid lightgrey;
     border-left: 0;
     border-radius: 20px;
     padding-right: 10px;
     margin: 0 1em 1em 1em;
-    font-weight: bold;
 }
 
 .fa-cat, .fa-money-bill-wave, .fa-child, .fa-heart
@@ -226,6 +233,7 @@ h1, h2, h3
 
 .hosting-card
 {
+    margin-bottom: 1em;
     padding: 5px 5px 10px 5px;
     background-color: white;
     border-radius: 20px;
@@ -492,6 +500,16 @@ footer > div > h3
         margin: 1em;
     }
 
+    #logo_nav
+    {
+        display: inherit;
+    }
+
+    #form > input
+    {
+        width: 100%;
+    }
+
     .research
     {
         display: none;
@@ -510,6 +528,11 @@ footer > div > h3
     #filters
     {
         flex-wrap: wrap;
+    }
+
+    .filter-list > a
+    {
+        margin-left: 0;
     }
 
     #main
