--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,13 @@ h1, h2, h3
     border: 1px solid #F2F2F2;
 }
 
+input::placeholder
+{
+    padding-left: 1em;
+    color: black;
+    font-weight: bold;
+}
+
 .btn
 {
     border-radius: 0 10px 10px 0;
@@ -296,13 +303,10 @@ h1, h2, h3
 
 .popular h2
 {
+    display: flex;
+    justify-content: space-between;
     font-weight: 900;
-    padding: 10px 20px 0 5px;
-}
-
-.fa-chart-line
-{
-    margin-left: 100px;
+    padding: 10px 0 0 5px;
 }
 
 .popular-card
